# localmind

./: .SRCINFO  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  PKGBUILD  README.md  SECURITY.md  dev-requirements.txt  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-ci.yml
docs/: CNAME  _config.yaml  configuration.md  default.html  development.md  getting_started.md  index.md  usage.md
docs/_includes/: nav.html
docs/_layouts/: default.html
docs/assets/css/: style.css  style.scss
localmind/: __main__.py  cli.py
localmind/cli/: main.py
localmind/core/: config.py  paths.py  runner.py
tests/: helpers.py  test_cli.py  test_e2e.py
