[project]
name = "localmind"
version = "0.1.0"
description = "Local-first prompt runner for files and directories, with extensible AI model support."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [{ name = "Jeff Sebring", email = "jeff@jeffsebring.com" }]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
]

# URLs for PyPI/GitHub
[project.urls]
homepage = "https://github.com/jeffsebring/localmind"
repository = "https://github.com/jeffsebring/localmind"

# CLI entry point
[project.scripts]
lcm = "localmind.cli:main"

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["localmind*"]

[tool.setuptools]
include-package-data = true
py-modules = ["localmind.cli"]
